Fix overflowing lines in issue display

--- a/src/screens/SprintPage/IssueDisplay/IssueDisplay.css
+++ b/src/screens/SprintPage/IssueDisplay/IssueDisplay.css
@@ -1,6 +1,6 @@
 .NoteText {
   /* overflow-wrap: normal; */
+  overflow-wrap: break-word;
   overflow: hidden;
   white-space: pre-line;
-  /* overflow-wrap: break-word; */
 }
